# nautilus

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  README.md  build.gradle.kts  gradle.properties  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  settings.gradle.kts  test.yaml  test_service.yaml
.github/workflows/: build.yaml  oci-images.yaml  pages.yaml
buildSrc/: build.gradle.kts
examples/simple/: lobby.yaml
gradle/: libs.versions.toml
lib/api-client/common/: build.gradle.kts
lib/api-client/common/src/main/kotlin/de/phyrone/nautilus/apiclient/common/: httpClientModule.kt
lib/api-client/spigot/: build.gradle.kts
lib/api-client/spigot/src/main/kotlin/de/phyrone/nautilust/apiclient/spigot/: SpigotApi.kt
lib/api-client/spigot/src/main/kotlin/de/phyrone/nautilust/apiclient/spigot/docs/: ResourceData.kt
lib/app-commons/: build.gradle.kts
lib/app-commons/src/main/kotlin/de/phyrone/nautilus/appcommons/: AppID.kt  ApplicationShutdownException.kt  MainLoop.kt  MainLoopFactory.kt  ShutdownHandler.kt  Subsystem.kt  appCommons.kt
lib/crds/: Cargo.toml  build.gradle.kts
lib/crds/generator/: Cargo.toml
lib/crds/generator/src/: main.rs  startup.rs
lib/crds/generator/src/crds/: minecraft_server.rs  minecraft_service.rs  mod.rs  template.rs
lib/crds/src/: instance.rs  lib.rs  main.rs  service.rs  template.rs
lib/crds/src/main/k8s/: minecraftservers.nautilus.phyrone.de.yaml  minecraftservices.nautilus.phyrone.de.yaml  minecrafttemplates.nautilus.phyrone.de.yaml
lib/crds/src/main/k8s/agones/: fleetautoscalers.autoscaling.agones.dev.yaml  fleets.agones.dev.yaml  gameservers.agones.dev.yaml  gameserversets.agones.dev.yaml
lib/crds/src/main/kotlin/de/phyrone/nautilus/crds/: NoArgs.kt  crds.kt
lib/crds/src/main/kotlin/de/phyrone/nautilus/crds/minecraft/: MinecraftServiceV1Alpha1.kt  MinecraftServiceV1Alpha1Spec.kt  MinecraftServiceV1Alpha1Status.kt  minecraftService.kt
lib/crds/src/main/kotlin/de/phyrone/nautilus/crds/repo/: MinecraftGitTemplateRepositoryV1Alpha1.kt  MinecraftGitTemplateRepositoryV1Alpha1Spec.kt  MinecraftGitTemplateRepositoryV1Alpha1Status.kt  repo.kt
lib/crds/src/main/rust/: lib.rs  main.rs
lib/crds/src/main/rust/crds/: minecraft_cluster.rs  minecraft_proxy.rs  minecraft_server.rs  mod.rs  shared.rs  template.rs
lib/grpc/: Cargo.toml  build.gradle.kts  build.rs
lib/k8s/: build.gradle.kts
lib/k8s/src/main/kotlin/de/phyrone/nautilus/lib/k8s/: Apply.kt  CrdUtils.kt  Ext.kt  LeaderElector.kt  ResourceJobRunner.kt  ResourceJobScope.kt  labels.kt  modules.kt
lib/k8s/src/main/kotlin/de/phyrone/nautilus/lib/k8s/utils/: WatchEventFlow.kt  WatchStateFlow.kt
lib/shared/: Cargo.toml  build.gradle.kts
lib/shared/src/: lib.rs  logging.rs  tokio.rs
lib/shared/src/main/kotlin/de/phyrone/nautilus/shared/: RefCounter.kt  RwLock.kt  StringLineOutputStream.kt  runWhen.kt  utils.kt
page/: docusaurus.config.ts  package.json
page/blog/: authors.yml  tags.yml
page/blog/2024/10/: 5-welcome-to-nautilus.md
page/docs/: thermiologie.md
page/src/pages/: impressum.md  index.md
proto/: agent.proto  common.proto
ref/mc-image-helper/src/main/java/me/itzg/helpers/forge/: InstallForgeCommand.java
services/agent/: build.gradle.kts
services/agent/bungee/: build.gradle.kts
services/agent/bungee/src/main/kotlin/de/phyrone/nautilus/agent/bungee/: BungeePlugin.kt  BungeePluginMain.kt
services/agent/bungee/src/main/resources/: bungee.yml
services/agent/paper/: build.gradle.kts
services/agent/paper/src/main/kotlin/de/phyrone/nautilus/agent/paper/: PaperPluginMain.kt  PluginMain.kt
services/agent/paper/src/main/kotlin/de/phyrone/steve/agent/paper/: PluginMain.kt
services/agent/paper/src/main/resources/: paper-plugin.yml
services/agent/shared/: build.gradle.kts
services/agent/velocity/: build.gradle.kts
services/agent/velocity/src/main/kotlin/de/phyrone/nautilus/velocity/: VelocityMain.kt
services/builder/: Cargo.toml  Dockerfile  build.gradle.kts
services/builder/shared/: build.gradle.kts
services/builder/shared/src/main/kotlin/de/phyrone/nautilus/builder/shared/: Cookbook.kt
services/builder/src/main/kotlin/de/phyrone/nautilus/builder/: BuilderMain.kt
services/operator/: Cargo.toml  Dockerfile  build.gradle.kts
services/operator/src/: consts.rs  env.rs  main.rs  service.rs  startup.rs  utils.rs
services/operator/src/main/kotlin/de/phyrone/nautilus/operator/: LeaderElectionSubsystem.kt  MinecraftServersSubsystem.kt  MinecraftServiceReconcileSubSystem.kt  OperatorApplication.kt
services/operator/src/main/kotlin/de/phyrone/nautilus/operator/resources/: BuilderBundles.kt  MinecraftServer.kt
services/operator/src/reconciler/: minecraft_cluster.rs  minecraft_proxy.rs  minecraft_server.rs  mod.rs  shared.rs  stopped_collector.rs
services/provisioner/: Cargo.toml  build.gradle.kts
services/provisioner/src/: main.rs
services/provisioner/src/main/kotlin/de/phyrone/nautilus/provisioner/: BuilderMain.kt  ProgressbarMon.kt  ProvisionerMain.kt  StartupParams.kt  utils.kt
