[workspace]
resolver = "2"
members = ["lib/crds", "lib/shared", "services/builder", "services/operator"]

[workspace.package]
version = "0.0.1"
edition = "2021"

[workspace.dependencies]
# Core
num_cpus = { version = "1.16.0", features = [] }
either = { version = "1.13.0", features = ["serde", "use_std"] }

# Error handling
error-stack = { version = "0.5.0", features = ["serde", "anyhow"] }
thiserror = "1.0.63"

# Logging,CLI co.
tracing = "0.1.40"
tracing-chrome = "0.7.2"
tracing-subscriber = { version = "0.3.18", features = ["std", "serde_json", "ansi", "alloc", "tracing", "fmt"] }

dotenv = "0.15.0"
clap = { version = "4.5.14", features = ["std", "derive", "string", "unicode", "suggestions", "env"] }
clap-num = "1.1.1"
clap-verbosity = "2.1.0"

# Seriazliation
serde = { version = "1.0.206", features = ["std", "alloc", "rc", "derive"] }
schemars = { version = "0.8.21", features = ["derive", "semver"] }
serde_json = { version = "1.0.124", features = ["alloc", "preserve_order"] }

# Asynchronous runtime
tokio = { version = "1.39.2", features = ["full", "tracing", "parking_lot"] }
tokio-util = { version = "0.7.11", features = ["full", "tracing"] }
futures = { version = "0.3.30", features = ["std", "async-await", "compat"] }

# Kubernetes
kube = { version = "0.93.1", features = ["client", "config", "rustls-tls", "ws", "gzip", "derive", "kube-runtime", "runtime"] }
k8s-openapi = { version = "0.23.0", features = ["latest", "schemars"] }

oci-spec = { version = "0.6.8", features = ["image"] }


# /lib
nautilus-shared-lib = { path = "lib/shared" }
nautilus-shared-crds = { path = "lib/crds" }
