[workspace]
resolver = "2"
members = [
    "lib/crds/",
    "services/operator"
]
[workspace.package]
version = "0.0.1-SNAPSHOT"
edition = "2021"
license = "EUPL-1.2"
license-file = "LICENSE.txt"

[workspace.dependencies]

clap = { version = "4.5.20", features = ["derive", "env", "string", "unicode"] }
clap-verbosity = { version = "2.1.0", features = ["serde"] }

indicatif = { version = "0.17.8", features = ["futures", "improved_unicode", "rayon", "tokio", "unicode-segmentation"] }
k8s-openapi = { version = "0.23.0", features = ["latest", "schemars"] }
kube = { version = "0.96.0", features = ["derive", "ws", "gzip", "runtime"] }
schemars = "0.8.21"
serde = { version = "1.0.210", features = ["derive", "rc", "alloc"] }
serde_json = { version = "1.0.132", features = ["alloc"] }
serde_yml = "0.0.12"
tokio = { version = "1.40.0", features = ["full", "tracing"] }
tokio-util = { version = "0.7.12", features = ["full", "tracing"] }
futures = { version = "0.3.31", features = ["std"] }

anyhow = { version = "1.0.91", features = ["std", "backtrace"] }
error-stack = { version = "0.5.0", features = ["serde", "std", "backtrace", "anyhow"] }
thiserror = "1.0.65"
tracing = { version = "0.1.40", features = ["std", "log", "log-always"] }
pretty_env_logger = { version = "0.5.0" }

bytesize = { version = "1.3.0", features = ["serde"] }


lib-crds = { path = "lib/crds", package = "crds" }