[package]
name = "nautilus-shared-crds"
version.workspace = true
edition.workspace = true

[dependencies]

# Core
either.workspace = true

# Async
tokio.workspace = true

# Seriazliation
serde.workspace = true
schemars.workspace = true
serde_json.workspace = true

# Kubernetes
kube.workspace = true
k8s-openapi.workspace = true


# /lib
steve-shared-lib.workspace = true