[package]
name = "nautilus-shared-crds"
version.workspace = true
edition.workspace = true

[dependencies]

# Core
either.workspace = true

# Async
tokio.workspace = true

# Seriazliation
serde.workspace = true
schemars.workspace = true
serde_json.workspace = true
serde_yml.workspace = true

# Kubernetes
kube.workspace = true
k8s-openapi.workspace = true


# /lib
nautilus-shared-lib.workspace = true
