[package]
name = "nautilus-shared-grpc"
version.workspace = true
edition.workspace = true

[dependencies]

# Core
either.workspace = true

# Async
tokio.workspace = true

# Seriazliation
serde.workspace = true
schemars.workspace = true
serde_json.workspace = true


# /lib
nautilus-shared-lib.workspace = true