[package]
name = "nautilus-shared-grpc"
version.workspace = true
edition.workspace = true

[dependencies]

# Async
tokio.workspace = true

# GRPC
tonic.workspace = true
tonic-build.workspace = true
prost.workspace = true


# /lib
nautilus-shared-lib.workspace = true

[build-dependencies]
walkdir.workspace = true
tonic-build.workspace = true
thiserror.workspace = true


[lib]
path = "src/main/rust/lib.rs"