[package]
name = "nautilus-operator"
version.workspace = true
edition.workspace = true

[dependencies]

# Logging,CLI co.
tracing.workspace = true
clap.workspace = true

# Seriazliation
serde.workspace = true
serde_json.workspace = true

# Asynchronous runtime
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true

# Error handling
error-stack.workspace = true
thiserror.workspace = true

# Kubernetes
kube.workspace = true
k8s-openapi.workspace = true

# /lib
nautilus-shared-lib.workspace = true
steve-crds.workspace = true
log = "0.4.22"