[package]
name = "operator"
version.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
clap-verbosity.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
kube.workspace = true
k8s-openapi.workspace = true
lib-crds.workspace = true
serde_json.workspace = true

anyhow.workspace = true
pretty_env_logger.workspace = true
tracing.workspace = true
error-stack.workspace = true
thiserror.workspace = true

bytesize.workspace = true
log = "0.4.22"
