[package]
name = "provisioner"
version.workspace = true
edition.workspace = true

[dependencies]

nautilus-shared-lib.workspace = true
tracing.workspace = true

clap.workspace = true
url.workspace = true

tokio.workspace = true
tokio-util.workspace = true

git2.workspace = true

# Error handling
error-stack.workspace = true
thiserror.workspace = true