[package]
name = "crds"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive", "env", "string", "unicode"] }
indicatif = { version = "0.18.0", features = ["futures", "improved_unicode", "rayon", "tokio", "unicode-segmentation"] }
k8s-openapi = { version = "0.26.0", features = ["latest", "schemars"] }
kube = { version = "2.0.0", features = ["derive"] }
schemars = "1.0.0"
serde = { version = "1.0.210", features = ["derive", "rc", "alloc"] }
serde_json = { version = "1.0.132", features = ["alloc"] }
serde_yml = "0.0.12"
tokio = { version = "1.40.0", features = ["full"] }
